# RePlay

./: .buildinfo  .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  README.md  README_algs.md  README_dev.md  build.sh  build_package.sh  genindex.html  index.html  install.sh  main.py  objects.inv  poetry_wrapper.sh  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  resolve_mirror.py  search.html  searchindex.js  setup.cfg  setup.py  show_report.sh  test_package.sh  uv_wrapper.sh
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build_docs.yml  build_packages.yml  check_release.yml  check_release_tag.yml  deploy_docs.yml  main.yml  publish.yml  publish_test.yml
.gitlab/: Dockerfile
.gitlab/issue_templates/: bug-report.md  feature_request.md  question.md
.gitlab/workflows/: main.yml
_sources/pages/: useful.rst.txt
docs/: Makefile  conf.py  index.rst
docs/pages/: development.rst  installation.rst  modules.rst  overview.md  settings.rst  spark.rst  usage.rst  useful.rst
examples/: 01_replay_basics.ipynb  02.1_models_with_features_comparison.ipynb  02_models_comparison.ipynb  03_features_preprocessing_and_lightFM.ipynb  04_splitters.ipynb  05_feature_generators.ipynb  06_item2item_recommendations.ipynb  07_filters.ipynb  07_recommending_for_categories.ipynb  08_bandit_comparison.ipynb  08_recommending_for_categories.ipynb  09_neural_ts_exp.ipynb  09_sasrec_example.ipynb  09_sasrec_example_freq_sampled.ipynb  09_sasrec_example_sampled.ipynb  09_sasrec_example_thr_sampled.ipynb  10_bert4rec_example.ipynb  11_polars_spark_pandas_comparison.ipynb  11_sasrec_dataframes_comparison.ipynb  12_neural_ts_exp.ipynb  13_personalized_bandit_comparison.ipynb  14_hierarchical_recommender.ipynb  15_sasrec_with_llm.ipynb  15_twotower_example.ipynb  15_twotower_example_with_parquet_module.ipynb  client_models.ipynb  cql_compare.py  features_for_sequential_models.ipynb  global_time_split_example.ipynb  gts_splitter.ipynb  sasrec_streaming_example.ipynb  train_ddpg.py  train_dt4rec.py  twotower_parquet.ipynb
examples/obp_connector/: config.py  run_real.py  run_synt.py
experiments/: 01_replay_basics.ipynb  01_replay_dataset.ipynb  02_models_comparison.ipynb  03_features_preprocessing_and_lightFM.ipynb  04_cql_compare.ipynb  04_cql_compare.py  04_cql_compare_no_norm.ipynb  04_splitters.ipynb  05_feature_generators.ipynb  06_item2item_recommendations.ipynb  07_filters.ipynb  07_recommending_for_categories.ipynb  09_neural_ts_exp.ipynb  ALS for MovieLens 100K.ipynb  ALS for MovieLens 20M.ipynb  KNN.ipynb  README.md  Tenders.ipynb  admm_slim_default.ipynb  cold_start_stories_log_split.ipynb  compare_models-ml1m-rel_1_plus_comments.ipynb  compare_models-ml1m.ipynb  compare_models.ipynb  cql_compare.py  ddpg_ml_1m.ipynb  experiment_utils.py  ideas.ipynb  ideas_log_split.ipynb  lightfm_with_features.ipynb  movielens.ipynb  movielens_log_split.ipynb  movielens_nmf.ipynb  new_scenario_test.ipynb  noisy_ddpg.ipynb  random_pop_test.ipynb  rekko.ipynb  rekko_log_split.ipynb  replay_basics.ipynb  results.csv  run_data_preparation.py  (+25 more)
experiments/model_comparison/: data_download.sh  datasets_choosing.ipynb
experiments/obp_connector/: 09_obp_connector.ipynb  config.py  run_real.py  run_synt.py
experiments/projects/: Tenders.ipynb
kernels/cut_cross_entropy/: __init__.py  cce.py  cce_backward.py  cce_lse_forward.py  constants.py  doc.py  indexed_dot.py  linear_cross_entropy.py  tl_autotune.py  tl_utils.py  torch_compile.py  utils.py
kernels/fused_linear_cross_entropy/: __init__.py  fused_linear_ce_loss.py
libs/: threadpoolctl-2.1.0-py3-none-any.whl
lightning_logs/version_0/: hparams.yaml  metrics.csv
lightning_logs/version_1/: metrics.csv
lightning_logs/version_10/: hparams.yaml
lightning_logs/version_2/: hparams.yaml  metrics.csv
lightning_logs/version_3/: metrics.csv
lightning_logs/version_5/: hparams.yaml  metrics.csv
lightning_logs/version_6/: metrics.csv
lightning_logs/version_7/: hparams.yaml  metrics.csv
lightning_logs/version_8/: hparams.yaml  metrics.csv
lightning_logs/version_9/: hparams.yaml  metrics.csv
pages/: development.html  installation.html  modules.html  settings.html  useful.html
pages/modules/: data.html  metrics.html  models.html  preprocessing.html  scenarios.html  splitters.html  utils.html
pages/useful_data/: algorithm_selection.html  optuna.html
projects/: microtemplate.py  pyproject.toml.template
replay/: __init__.py  conftest.py  constants.py  converter.py  data_preparator.py  dataframe_bucketizer.py  distributions.py  experiment.py  filters.py  history_based_fp.py  logger.py  mdp_dataset_builder.py  mdp_preparator.py  model_handler.py  optuna_objective.py  session_handler.py  time.py  utils.py
replay/_spark_ml_rec/: demo.py  spark_base_rec.py  spark_rec.py  spark_user_rec.py  splitter.py
replay/ann/: ann_mixin.py  hnswlib_mixin.py  nmslib_hnsw_mixin.py  utils.py
replay/constants/: batches.py  metadata.py
replay/nn/: agg.py  (+11 more)
replay_benchmarks/: 09_sasrec_example_like_pipeline.ipynb  README.md  __init__.py  base_runner.py  benchmark_test.ipynb  infer_runner.py  train_runner.py
scala/: .gitignore  build.sbt
scripts/: __init__.py  app.py  style.css
sponge_bob_magic/: __init__.py  constants.py  converter.py  data_preparator.py  experiment.py  filters.py  metrics.py  session_handler.py  utils.py  validation_schemes.py
tests/: __init__.py  conftest.py  constants.py  pyspark_testcase.py  test_all_to_numeric.py  test_ann_utils.py  test_cluster.py  test_converter.py  test_data_preparator.py  test_data_preparator_docs.py  test_dataframe_bucketizer.py  test_experiment.py  test_fallback.py  test_history_based_features.py  test_implicit.py  test_import.py  test_main_scenario.py  test_mdp_dataset_builder.py  test_metrics.py  test_metrics_docs.py  test_optuna.py  test_package.py  test_save_load.py  test_session_handler.py  test_utils.py  test_validation_schemes.py  utils.py
(+962 files in other folders)
