[tool.poetry]
name = "replay-rec"
version = "0.9.0"
description = "RecSys Library"
authors = ["AI Lab",
           "Alexey Vasilev",
           "Anna Volodkevich",
           "Alexey Grishanov",
           "Yan-Martin Tamm",
           "Boris Shminke",
           "Alexander Sidorenko",
           "Roza Aysina"]
readme = "README.md"
homepage = "https://sberbank-ai-lab.github.io/RePlay/"
repository = "https://github.com/sberbank-ai-lab/RePlay"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
packages = [
    { include = "replay" }
]

[tool.poetry.dependencies]
python = ">=3.7, <=3.10"
#lightautoml = {version = ">=0.3.1, <0.3.7", python = "<3.10"}
pytorch-ignite = "*"
lightfm = {version = "*", python = "<3.10"}
numpy = [
    {version = "<=1.19.5", python = "<3.7"},
    {version = ">=1.2, <=1.21.5", python = ">=3.7, <3.10"},
    {version = "1.22.3", python = "3.10"},
]
optuna = "*"
pandas = [
    {version = "<=1.1.5", python = "<3.10"},
    {version = "1.5.1", python = "3.10"}
]
psutil = "*"
pyspark = ">=3.0, < 3.2"
scipy = "*"
scikit-learn = "*"
torch = [
    {version = "*", python = "<3.7"},
    {version = "<1.13.0", python = ">=3.7, <3.10"},
    {version = ">=1.11.0, <1.13.0", python = "3.10"},
]
numba = ">=0.50"
llvmlite = ">=0.32.1"
seaborn = "*"
pyarrow = "*"
implicit = ">=0.5"
ipython = [
    {version = "<8.0", python = "<3.8"},
    {version = ">=8.0", python = ">=3.8"}
]

[tool.poetry.dev-dependencies]
# dev only
# visualization
jupyter = "*"
jupyterlab = "*"
matplotlib = "*"
# testing
pytest = "5.4.3"
pytest-cov = "2.9.0"
parameterized = "0.7.4"
statsmodels = "*"
# style
flake8 = "*"
black = "*"
pre-commit = "*"
pylint = "*"
# docs
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"
docutils = "=0.16"
myst-parser = "*"
ghp-import = "*"
# emacs dependencies
rope = "*"
virtualenv = "*"
# stubs
data-science-types = "*"
pyspark-stubs = "*"

[tool.black]
line-length = 79

[build-system]
build-backend = "poetry.masonry.api"
