[tool.poetry]
name = "replay-rec"
version = "0.10.0"
license = "Apache-2.0"
description = "RecSys Library"
authors = ["AI Lab",
           "Alexey Vasilev",
           "Anna Volodkevich",
           "Alexey Grishanov",
           "Yan-Martin Tamm",
           "Boris Shminke",
           "Alexander Sidorenko",
           "Roza Aysina"]
readme = "README.md"
homepage = "https://sb-ai-lab.github.io/RePlay/"
repository = "https://github.com/sb-ai-lab/RePlay"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    { include = "replay" }
]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
poetry-core = "1.6.0"
lightfm = "*"
lightautoml = ">=0.3.1, <0.3.7"
numpy = ">=1.20.0"
optuna = "*"
pandas = "*"
psutil = "*"
pyspark = ">=3.0, < 3.2"
scipy = "*"
scikit-learn = "*"
torch = "*"
numba = ">=0.50"
llvmlite = ">=0.32.1"
seaborn = "*"
pyarrow = "*"
implicit = ">=0.5"
pytorch-ranger = "^0.1.1"
d3rlpy = "*"
# required by d3rlpy
gym = "0.17.2"

[tool.poetry.dev-dependencies]
# dev only
# visualization
jupyter = "*"
jupyterlab = "*"
matplotlib = "*"
# testing
pytest = "5.4.3"
pytest-cov = "2.9.0"
parameterized = "0.7.4"
statsmodels = "*"
# style
flake8 = "*"
black = "*"
pre-commit = "*"
pylint = "*"
# docs
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"
docutils = "=0.16"
myst-parser = "*"
ghp-import = "*"
# emacs dependencies
rope = "*"
virtualenv = "*"
# stubs
data-science-types = "*"
pyspark-stubs = "*"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
